--- a/.classpath
+++ b/.classpath
@@ -17,8 +17,8 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
-	<classpathentry kind="lib" path="C:/Users/Nicholas/Desktop/extJars/slf4j-api-1.7.13.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Nicholas/Desktop/extJars/slf4j-nop-1.7.13.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Nicholas/Desktop/extJars/slf4j-simple-1.7.13.jar"/>
+	<classpathentry kind="lib" path="dependencies/slf4j-api-1.7.13.jar"/>
+	<classpathentry kind="lib" path="dependencies/slf4j-nop-1.7.13.jar"/>
+	<classpathentry kind="lib" path="dependencies/slf4j-simple-1.7.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
